# violette-gl

./: Cargo.toml
src/: buffer.rs  debug.rs  framebuffer.rs  program.rs  shader.rs  texture.rs  vertex.rs
src/base/: mod.rs  resource.rs
violette-low/: Cargo.toml
violette-low/src/: buffer.rs  debug.rs  framebuffer.rs  lib.rs  program.rs  shader.rs  texture.rs  utils.rs  vertex.rs
violette-low/src/base/: bindable.rs  mod.rs  resource.rs
