[package]
name = "violette-low"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bitflags = "1.3.2"
bytemuck = "1.7.3"
crevice  = "0.8.0"
duplicate = "0.3.0"
gl = "0.14.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.9.0"
thiserror = "1.0.30"
