[package]
name = "violette-low"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
bitflags = "1.3.2"
bytemuck = "1.7.3"
crevice = "0.12.0"
duplicate = "0.4.1"
either = "1.8.1"
gl = "0.14.0"
glam = { version = "0.22.0", optional = true }
image = { version = "0.24.0", optional = true }
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.9.0"
phf = { version = "0.11.1", features = ["macros"] }
thiserror = "1.0.30"
tracing = "0.1.33"

[features]
default = ["img", "uniforms-glam"]
img = ["image"]
fast = ["no-unbind"]
uniforms-glam = ["glam", "vertex-glam"]
vertex-glam = ["glam"]
no-unbind = []
